logConfig update